--- a/senguo.cc/admin/templates/admin/shop-wx-set.html
+++ b/senguo.cc/admin/templates/admin/shop-wx-set.html
@@ -16,7 +16,14 @@
     </div>
     <ul class="info-set-list mt20 font14">
         <li class="item clearfix">
-            <a href="{{reverse_url('BbsDetail',21)}}" target="_blank" class="pull-right mt40">查看详细教程</a>
+            <div class="clearfix">
+                <p class="tit">请注意：开启微信通知后，森果会自动在您的公众平台模版消息中添加3个模版，而每个公众平台最多</p>
+                <p class="tit ml40">可添加15个模版，所以请在开通微信通知功能前确认您的公众平台开通了模版消息功能，</p>
+                <p class="tit ml40">并且『模版消息』中已有的模版数量小于13个。</p>
+            </div>
+        </li>
+        <li class="item clearfix">
+            <a href="{{reverse_url('BbsDetail',0)}}" target="_blank" class="pull-right mt40">查看详细教程</a>
             <div class="clearfix">
                 <p class="tit">第一步：进入微信公众平台管理后台，点击页面左下方的『开发者中心』进行如下操作：</p>
                 <p class="text-grey2 ml40">1. 在『开发者中心』的『配置项』选项下，找到『接口权限表』板块下的『网页服务』类目；</p>
@@ -32,7 +39,7 @@
                 <p class="text-grey2 ml40">微信公众号名称：<span class="name">{{current_shop.admin.mp_name}}</span></p>
                 <p class="text-grey2 ml40">AppID：<span class="id">{{current_shop.admin.mp_appid}}</span></p>
                 <p class="text-grey2 ml40">AppSecret：<span class="secret">{{current_shop.admin.mp_appsecret}}</span></p>
-                <p class="text-pink ml40">提示：AppID、AppSecret 请在微信公众平台管理后台的『开发者中心』查看</p>
+                <p class="text-pink ml40">提示：AppID、AppSecret 请在微信公众平台管理后台的『开发者中心』查看。</p>
             </div>
         </li>
     </ul>
