fix some 微信通知文案

--- a/senguo.cc/admin/templates/admin/shop-wx-set.html
+++ b/senguo.cc/admin/templates/admin/shop-wx-set.html
@@ -18,16 +18,18 @@
 	<ul class="info-set-list mt20 font14">
 		<li class="item clearfix">
             <div class="clearfix">
-                <p class="tit">请注意：开启微信通知后，森果会自动在您的公众平台模版消息中添加3个模版，而每个公众平台最多</p>
-                <p class="tit ml40">可添加15个模版，所以请在开通微信通知功能前确认您的公众平台开通了模版消息功能，</p>
-                <p class="tit ml40">并且『模版消息』中已有的模版数量小于13个。</p>
+                <p class="tit">请注意：您的微信公众平台必须具备以下条件才能开启微信通知：</p>
+                <p class="text-grey2 ml40">1. 您的公众平台必须为已经通过认证的服务号；</p>
+                <p class="text-grey2 ml40">2. 您的公众平台『模版消息』中『模版库』选项卡下的所在行业必须有『IT科技/互联网|电子商务』；</p>
+                <p class="text-grey2 ml40">3. 开启微信通知后，森果会自动在您的公众平台模版消息中添加3个模版，而每个公众平台最多可添加</p>
+                <p class="text-grey2 ml40">　15个模版，所以请确认『模版消息』中『我的模版』选项卡下已有的模版数量小于13个。</p>
             </div>
         </li>
 	    <li class="item clearfix">
-	    	<a href="{{reverse_url('BbsDetail',0)}}" target="_blank" class="pull-right mt40">查看详细教程</a>
+	    	<a href="{{reverse_url('BbsDetail',99)}}" target="_blank" class="pull-right mt40">查看详细教程</a>
             <div class="clearfix">
                 <p class="tit">第一步：进入微信公众平台管理后台，点击页面左下方的『开发者中心』进行如下操作：</p>
-                <p class="text-grey2 ml40">1. 在『开发者中心』的『配置项』选项下，找到『接口权限表』板块下的『网页服务』类目；</p>
+                <p class="text-grey2 ml40">1. 在『开发者中心』的『配置项』选项卡下，找到『接口权限表』板块下的『网页服务』类目；</p>
                 <p class="text-grey2 ml40">2. 点击『网页服务』类目中第一项『网页授权获取用户基本信息』后面的『修改』按钮；</p>
                 <p class="text-grey2 ml40">3. 在弹出的对话框中填入链接“auth.senguo.cc”（不包含引号），并点击『确定』按钮。</p>
                 <p class="text-pink ml40">注意：请务必设置正确的链接，否则所有用户将无法正常登录您的森果店铺。</p>
