--- a/senguo.cc/admin/templates/customer/goods-detail.html
+++ b/senguo.cc/admin/templates/customer/goods-detail.html
@@ -33,7 +33,7 @@
             <span id="dianzan" data-flag="{{good.favour_today}}" data-id="{{good.id}}"><span class="zan {% if good.favour_today %}zaned{% end %}"></span><span class="num">{{good.favour or 0}}</span></span>
             <span>&nbsp;销量 {{good.saled or 0}}</span>
         </p>
-        <p>{% if good.tag>1 %}<span class="goods-tag">{% if good.tag==2 %}限时折扣{% elif good.tag==3 %}热销水果{% elif good.tag==4 %}今日特价{% else %}新品上架{% end %}</span>{% end %}{% if good.buy_limit>0 %}<span class="goods-tag">{% if good.buy_limit==1 %}仅限新用户{% elif good.buy_limit==2 %}仅限老用户{% else %}仅限充值用户{% end %}</span>{% end %}</p>
+        <p>{% if good.tag>1 %}<span class="goods-tag">{% if good.tag==2 %}限时折扣{% elif good.tag==3 %}热销水果{% elif good.tag==4 %}今日特价{% else %}新品上架{% end %}</span>{% end %}{% if good.buy_limit>0 %}<span class="goods-tag">{% if good.buy_limit==1 %}限新用户{% elif good.buy_limit==2 %}限老用户{% else %}限充值用户{% end %}</span>{% end %}</p>
         <p class="goods-info">{{good.intro or ''}}</p>
     </div>
     <ul class="wrap-choose-goods">
