--- a/senguo.cc/admin/templates/admin/seckill.html
+++ b/senguo.cc/admin/templates/admin/seckill.html
@@ -46,7 +46,7 @@
                                                                         <td>秒杀开始时间</td>
                                                                         <td>持续时间</td>
                                                                         <td>秒杀商品</td>
-                                                                        <td>领取 / 下单</td>
+                                                                        <td>加入购物车 / 下单</td>
                                                                         <td>操作</td>
                                                           </tr>
                                             </thead>
