--- a/senguo.cc/admin/templates/m-admin/order-detail.html
+++ b/senguo.cc/admin/templates/m-admin/order-detail.html
@@ -38,7 +38,7 @@
     <div class="order-item pt10">
         <p class="text-black">订单编号：<span class="order-id" data-id="77">{{order.num}}</span></p>
         <p>下单时间：<span>{{order.create_date}}</span></p>
-        <p>收货人：<span>{{order.receiver}}</span><span class="user-box">用户：<a href="javascript:;">{{order.customer_nickname}}</a></span></p>
+        <p>收货人：<span>{{order.receiver}}</span><span class="user-box">用户：<a href="/madmin/userDetail/{{order.customer_id}}">{{order.customer_nickname}}</a></span></p>
         <p>联系电话：<span>{{order.phone}}</span><a class="ml10" href="tel:{{order.phone}}">拨号</a></p>
         <p>{% if order.type==3%}自提{% else %}收货{% end %}地址：<span>{{order.address_text}}</span></p>
         <p>{% if order.type==3%}自提{% else %}配送{% end %}时间：<span class="send_date m-r10" style="display: none;">今天</span><span>{{order.send_time}}</span></p>
