余额详情添加搜索提示

--- a/senguo.cc/admin/templates/superAdmin/balance-detail.html
+++ b/senguo.cc/admin/templates/superAdmin/balance-detail.html
@@ -27,7 +27,7 @@
             <!-- add by jyj 2015-7-4 -->
             <li class="ballance-list">余额列表</li>
             <div class="pull-right">
-                <input type="text" id="shop-name"/>
+                <input type="text" id="shop-name" placeholder="请输入店铺名进行"/>
                 <button class="btn" id="search-banlance">搜索</button>
             </div>
             <!--  -->
