--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -12,7 +12,7 @@
 .goods-list-item .great-number em{background:url('../svg/icon_list-2.png') no-repeat 0 center;display:inline-block;width:10px;height:10px;background-size:140px 180px;}
 .goods-list-item .great-number .gray-heart{background-position:-70px -80px;}
 .goods-list-item .great-number .red-heart{background-position:-70px -70px !important;}
-.goods-list-item .num_box{width:89px;overflow:hidden;height:32px;}
+.goods-list-item .num_box{width:90px;overflow:hidden;height:32px;}
 .goods-list-item .charge-style{clear:both;}
 .goods-list-item .charge-style span,a{display:inline-block;}
 .goods-list-item .charge-first{width:100%;float:left;line-height:36px;padding-right:25px;}
@@ -196,6 +196,6 @@
 
 .seckill-goods{background-color: #FF9800 !important;}
 
-.buylimit{display:inline-block;font-size: 12px;color: #72D6B3;width:80px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-right: 4px;border: 1px solid #72D6B3;}
-.buylimit-box{min-height:30px;}
-.goods-list-item .buylimit{margin-top:8px;color:#fec306;border-color:#fec306;}
+.buylimit{display:inline-block;font-size: 12px;color: #72D6B3;width:66px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-right: 4px;border: 1px solid #72D6B3;}
+.buylimit-box{margin-top:8px;min-height:30px;}
+.goods-list-item .buylimit{color:#fec306;border-color:#fec306;}
