--- a/senguo.cc/admin/templates/m-admin/user.html
+++ b/senguo.cc/admin/templates/m-admin/user.html
@@ -55,7 +55,7 @@
                             <span class="sex-mark man-mark"></span>
                             <span class="user-mark f12 c666 clip"></span>
                         </p>
-                        <p class="c333 mt4 f12 bold user-balance">余额 <span class="ubalance"></span>元</p>
+                        <p class="c333 mt4 f12 user-balance">余额 <span class="ubalance"></span>元</p>
                         <p class="mt4 c999 clip">
                             <span class="mr10">用户积分 <span class="upoint"></span>分</span>
                             <span>用户ID <span class="uid"></span></span>
