--- a/senguo.cc/admin/static/css/beauty/home.css
+++ b/senguo.cc/admin/static/css/beauty/home.css
@@ -71,6 +71,7 @@ body{font-size: 14px;}
 .seckill-btn{width: 80px;height: 28px;line-height: 28px;display: inline-block;cursor:pointer;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;border: 1px solid #fff;}
 .seckill-btn-yes{border-color: #eee;background-color:#eee;color: #999;}
 .price-tip{display: inline-block;color: #FFF;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #fff;font-size: 12px;height: 18px;line-height: 16px;-webkit-transform:scale(0.9);}
+.price-tip2{display: inline-block;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid;font-size: 12px;height: 18px;line-height: 16px;-webkit-transform:scale(0.9);}
 .p-row{white-space: nowrap;font-size: 12px;}
 .nowrap{white-space: nowrap;}
 
