--- a/senguo.cc/admin/static/css/market-goods.css
+++ b/senguo.cc/admin/static/css/market-goods.css
@@ -104,5 +104,5 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .goods-tag{display: inline-block;font-size: 12px;color: #fec306;width:80px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-left: 4px;border: 1px solid #fec306;}
 .market-price{text-decoration:line-through;}
 .goods-info-lst{padding-bottom:50px;}
-
-
+.seckill-buy{position:absolute;right:62px;top:0;width: 90px;height: 30px;line-height: 30px;cursor:pointer;background-color:#7ebf91;text-align: center;color: #fff;font-size: 14px;border-radius: 30px;}
+.seckill-buy-yes{background-color: #ccc;}
