--- a/senguo.cc/admin/templates/official/shoplist.html
+++ b/senguo.cc/admin/templates/official/shoplist.html
@@ -11,12 +11,12 @@
     <img src="/static/official_img/slide_bg.jpg" alt="" class="shop_listbg"/>
 	<a href="{{reverse_url('fruitzoneShopList')}}" class="more-list" target="_blank">查看所有店铺</a>
 	<div class="text-white number_box font36">
-		<span class="pull-left mr20">全国已有</span>
+		<span class="pull-left mr20 ptxt">全国已有</span>
 		<div class="num pull-left text-center"><span class="n num1">0</span><span class="line"></span></div>
 		<div class="num pull-left text-center"><span class="n num2">0</span><span class="line"></span></div>
 		<div class="num pull-left text-center"><span class="n num3">0</span><span class="line"></span></div>
 		<div class="num pull-left text-center"><span class="n num4">0</span><span class="line"></span></div>
-		<span class="pull-left ml20">家同行</span>
+		<span class="pull-left ml20 ptxt">家同行</span>
 		<input type="hidden" value="{{context['shop_count']}}" id="total_count">
 	</div>
 	<div class="box"><div class="map text-center" id="map"><img src="/static/images/loading.gif" class="loading"/></div></div>
