--- a/senguo.cc/admin/static/css/admin-shop-set.css
+++ b/senguo.cc/admin/static/css/admin-shop-set.css
@@ -41,7 +41,8 @@
 .receipt-msg{width:400px;overflow:hidden;}
 
 .notice_summary{width:100%;height:28px;overflow:hidden;}
-.notice_detail{width:100%;height:120px;overflow:hidden;}
+.notice_link{width:80%;height:28px;overflow:hidden;}
+.notice_detail{width:75%;height:120px;overflow:hidden;}
 
 .download_img{line-height:100px;}
 
@@ -71,6 +72,10 @@
 .pop-btns>a{display: inline-block;width: 80px;margin: 0 10px;border: 1px solid #eee;border-radius: 2px;text-align: center;height: 28px;line-height: 28px;}
 .pop-btns .ok-btn{background-color: #33CC66;color: #fff;display: inline-block !important;}
 .pop-btns .cancel-btn{color: #999;background: #fff;}
+
+.href_type{padding:5px 10px;background-color:#f2f2f2;}
+.href_type.active{background:url('/static/images/check_checked.png') no-repeat center right;background-size:20px;background-color:#f2f2f2;}
+
 /*店铺认证*/
 .invisible{visibility: hidden;}
 .hide{display: none!important;}
