--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -31,7 +31,7 @@
                     <div class="swiper-container" id="swiper-container">
                         <div class="swiper-wrapper">
                             {% for notice in notices%}
-                            <div class="swiper-slide item notice-item">
+                            <div class="swiper-slide item notice-item" data-url="{{notice[3] or ''}}" data-type="{{notice[4]}}">
                                 <img src="{{notice[2] or '/static/images/banner.png'}}?imageView2/1/w/800/h/320" alt=""/>
                                 <p class="notice-title">{{notice[0]}}</p>
                                 <input type="hidden" value="{{notice[1]}}" class="notice-detail"/>
