--- a/senguo.cc/admin/static/bbs/css/bbs-main.css
+++ b/senguo.cc/admin/static/bbs/css/bbs-main.css
@@ -1,22 +1,23 @@
 body{background-color: #f0f4f0;padding-top: 120px;}
 .w980{width: 980px;position: relative;left: 50%;margin-left: -490px;}
 /*首页*/
-.wrap-bbst{position: fixed;left: 0;top: 0;z-index:100;}
+.wrap-bbst{position: fixed;left: 0;top: 0;z-index:100;width: 100%;}
 .bbs-top{background-color: #48b6a4;height: 60px;}
 .wrap-userinfo{height: 60px;line-height: 60px;}
 .wrap-userinfo>a{display: block;height: 60px;}
+.wrap-userinfo img{border: 1px solid #fff;border-radius: 50%;width: 38px;height: 38px;}
 .name-text{font-size: 14px;color: #fff;}
-.logo-sg{display: inline-block;width: 178px;height: 49px;background: url("../img/logo.png") no-repeat;}
-.wrap-search{display: inline-block;width: 600px;height: 40px;position: relative;margin-left: 20px;}
+.logo-sg{display: inline-block;width: 178px;height: 49px;background: url("../img/logo.png") no-repeat;position: relative;top: 6px;vertical-align: middle;}
+.wrap-search{display: inline-block;width: 600px;height: 40px;position: relative;margin-left: 20px;position: relative;top: 6px;}
 .search-input{border: none;width: 100%;height: 40px;font-size: 14px;color: #fff;background-color: #4ab89e;-webkit-box-sizing: border-box;padding: 0 50px 0 10px;}
 .search-btn{position: absolute;top: 4px;right: 10px;background: url('../img/icon_search.png') no-repeat;display: inline-block;width: 29px;height: 29px;}
 .wrap-nav{background-color: #fff;height: 50px;border-bottom: 1px solid #b9bdb9;padding-bottom: 2px;}
-.nav-list{padding-left: 40px;}
+.nav-list{padding-left: 40px;-webkit-box-sizing: border-box;}
 .nav-list>li{float:left;width: 92px;}
 .nav-list>li>a{display: block;text-align: center;color: #9f9f9f;font-size: 14px;height: 48px;line-height: 48px;-webkit-box-sizing: border-box;border-bottom: 2px solid #fff;}
 .nav-list>li>a:hover{color:#4ab89e;border-color:#4ab89e;}
 .nav-list .active{color:#4ab89e;border-color:#4ab89e;}
-.container{max-width: 980px;width: 980px;margin-top: 10px;}
+.bbs-container{width: 980px;margin: 0 auto;position: relative;padding-top: 10px;}
 .box-border{border: 1px solid #DEE2DE;border-top:none;border-bottom-color: #B9BDB9;}
 .wrap-left{float:left;width: 676px;-webkit-box-sizing: border-box;}
 .wrap-right{width: 284px;}
@@ -26,11 +27,40 @@ body{background-color: #f0f4f0;padding-top: 120px;}
 .topic-title{color: #333;font-size: 16px;}
 .wrap-topic-attr{margin-top: 6px;height: 18px;font-size: 12px;line-height:18px;color: #999;}
 .wrap-topic-attr>span{display: inline-block;margin-right: 10px;}
-.topic-class{border: 1px solid #999;border-radius: 6px;}
-.icon-topic{display: inline-block;height: 14px;padding-left: 16px;font-size: 12px;color: #999;margin-left: 10px;background: url('../img/bbs_icon.png') no-repeat;}
-.dianzan{background-position: 0 -26px;}
-.dianzan-active{background-position: 0 -39px;}
-.reply{background-position: 0 -52px;}
+.topic-class{border: 1px solid #999;border-radius: 6px;padding: 0 4px;}
+.icon-topic{display: inline-block;height: 16px;padding-left: 18px;font-size: 12px;color: #999;margin-left: 10px;background: url('../img/bbs_icon.png') no-repeat;background-size: 28px;}
+.dianzan{background-position: 0 -36px;}
+.dianzan-active{background-position: 0 -52px;}
+.reply{background-position: 0 -17px;}
+.viewr{background-position: 0 2px;padding-left: 22px;background-size: 22px;}
+.publish-box{display: block;height: 94px;background: #4ab89e url("../img/publish_txt.png") no-repeat center center;}
+.aside-box{padding: 20px;background-color: #fff;}
+.aside-title{border-bottom: 1px solid #666;padding-bottom: 4px;}
+.aside-title>span{display: inline-block;color: #666;font-size: 16px;border-left: 4px solid #4ab89e;padding-left: 4px;}
+.aside-list>li{padding: 10px 0;border-bottom: 1px solid #E7E7E7;}
+.num-txt{display: inline-block;width: 94px;}
+.more-btn{display: block;height: 50px;text-align: center;line-height: 50px;background-color: #fff;color: #999;}
+.dl{position: relative;}
+.dl>dd{padding-right: 10px;height: 50px;width: 60px;position: absolute;left: 0;top: 0;}
+.dl>dd img{width: 50px;height: 50px;border-radius: 50%;}
+.dl>dt{padding-left: 60px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
