--- a/senguo.cc/admin/static/bbs/css/main.css
+++ b/senguo.cc/admin/static/bbs/css/main.css
@@ -1,3 +1,4 @@
+body{background-color: #f3f3f3;overflow-x: hidden;max-width: 800px;min-width: 320px;margin: 0 auto;}
 /*首页*/
 .bbs-menu{background-image: url('/static/bbs/img/icon_menu.png');background-size: 20px;padding-left: 26px;}
 .wrap-menu-list{position: absolute;width: 112px;background-color: #48b6a4;top:100%;left: 0;z-index:99;}
