--- a/senguo.cc/admin/static/bbs/css/reset.css
+++ b/senguo.cc/admin/static/bbs/css/reset.css
@@ -6,9 +6,8 @@ small, strike, strong, tt, var,
 b, u, i, center, dl, dt, dd, ol, ul, li, 
 form, label, legend,fieldset,section,
 table, caption, tbody, tfoot, thead, tr, th, td {margin: 0; padding: 0; border: none; outline: none; vertical-align: baseline;-webkit-appearance: none;-moz-appearance:none;appearance:none;}
-html,body,textarea,input,select,button,h1,h2,h3,h4,h5,h6{line-height: 1.25;font-size: 15px;font-family: "Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif;}
+html,body,textarea,input,select,button,h1,h2,h3,h4,h5,h6{line-height: 1.25;font-size: 14px;font-family: "Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif;}
 html{overflow-x: hidden;-webkit-overflow-scrolling:touch;overflow-scrolling:touch;min-height: 100%;}
-body{background-color: #f3f3f3;overflow-x: hidden;max-width: 800px;min-width: 320px;margin: 0 auto;}
 .h100{height: 100%;overflow: hidden;}
 .h0{height: 0 !important;overflow: hidden;}
 i{display: inline-block;background-size: contain;background-repeat: no-repeat;}
@@ -56,12 +55,15 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .white-box{background-color: #fff;padding: 0 10px;margin-bottom: 12px;}
 .bm10{bottom:10px !important;}
 /*字体大小*/
-.f12{font-size: 12px;}
+.f12{font-size: 12px !important;}
+.f14{font-size: 14px !important;}
+.f16{font-size: 16px !important;}
 /*字体颜色*/
 .red-txt{color: #ff6666!important;}
-.green{color: #4be2d4;}
+.green{color: #4be2d4!important;}
 .c000,.text-black{color: #333 !important;}
 .c333{color: #333!important;}
+.c666{color: #666!important;}
 .c999{color: #999!important;}
 .blue-txt{color: #6ba4ef;}
 /*背景色*/
